upload page constructed

--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -11,12 +11,12 @@
                 </div>
             </div>
             <div class="row shadow-sm mb-2" *ngFor="let item of cartItems">
-                <div class="col-12 col-sm-4 text-center"><img class="img-aspect p-1 rounded-2"
+                <div class="col-12 col-sm-4 text-center"><img class="img-aspect p-1 rounded-2 c-pointer"
                         src="{{item.product.thumbnail}}" alt="" height="220px"
                         routerLink="../product/{{item.product.id}}"></div>
                 <div class="col py-3 position-relative">
-                    <h6 class="text-muted mb-0" routerLink="../product/{{item.product.id}}">{{item.product.brand}}</h6>
-                    <h5 class="mb-0" routerLink="../product/{{item.product.id}}">{{item.product.title}}</h5>
+                    <h6 class="text-muted mb-0 c-pointer" routerLink="../product/{{item.product.id}}">{{item.product.brand}}</h6>
+                    <h5 class="mb-0 c-pointer" routerLink="../product/{{item.product.id}}">{{item.product.title}}</h5>
                     <p class="mb-2 opacity-75 one-liner">Lorem ipsum dolor sit amet.
                     </p>
                     <h5 class="d-inline-block me-2 fw-normal">{{item.product.price | currency: 'INR'}}</h5>
@@ -32,8 +32,7 @@
                                 remove
                             </span>
                         </button>
-                        <input type="text"
-                            class="form-control w-3rem flex-grow-0 text-center text-red border-start-0 border-red border-end-0 no-border-on-focus"
+                        <input type="text"class="form-control w-3rem flex-grow-0 text-center text-red border-start-0 border-red border-end-0 no-border-on-focus"
                             (keyup)="updateCartHandler(item.product.id, $event)" value="{{item.quantity}}"
                             placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
                         <button class="btn btn-outline-red border-start-0 px-2"
