--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,7 +14,7 @@
           <a class="text-muted my-auto me-4 position-relative" routerLink="/cart">
               <i class="material-icons fs-2">shopping_cart</i>
               <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill p-1 bg-red">
-                {{cartQuantity}}
+                {{cartQuantity<100 ? cartQuantity : '99+' }}
               </span>
           </a>
           
@@ -24,7 +24,7 @@
             </button>
             <ul class="dropdown-menu dropdown-menu-end">
               <li><a class="dropdown-item" routerLink="/upload">Upload Orders</a></li>
-              <li><a class="dropdown-item" routerLink="/login">{{userName=='Guest' ? 'Login' : 'Logout'}}</a></li>
+              <li><a class="dropdown-item" (click)="loggingHandler()">{{userName=='Guest' ? 'Login' : 'Logout'}}</a></li>
             </ul>
           </div>
         </ul>
