--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -2,3 +2,7 @@
     transform: scale(1.02);
     /* shadow: */
 }
+
+.quantity-input:focus, .quantity-input:active {
+    outline:none !important;
+}
