--- a/src/app/components/product-detail/product-detail.component.html
+++ b/src/app/components/product-detail/product-detail.component.html
@@ -2,7 +2,7 @@
   <div class="col-12 col-md-6 col-lg-6">
     <div class="row">
       <div class="col-2">
-        <div class="img-aspect mb-2" *ngFor="let image of product.images; index as i"
+        <div class="img-aspect mb-2 c-pointer" *ngFor="let image of product.images; index as i"
           data-bs-target="#carouselExampleIndicators" [attr.data-bs-slide-to]="i"><img class="img-fluid img-aspect"
             src="{{image}}" alt=""></div>
       </div>
