--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,9 +1,12 @@
 <div class="container-fluid pt-2">
   <div class="row">
-    <div class="col-2 d-none d-sm-block">
-      <div class="d-flex justify-content-between"><h4 class="mb-3">Filters</h4> <button class="btn btn-secondary p-2" (click)="clearFilters()"><span class="material-symbols-outlined">
-        restart_alt
-        </span></button></div>
+    <div class="col-2 d-none d-md-block">
+      <div class="d-flex justify-content-between">
+        <h4 class="mb-3">Filters</h4> <button class="btn btn-secondary p-1 h-fit" (click)="clearFilters()"><span
+            class="material-symbols-outlined">
+            restart_alt
+          </span></button>
+      </div>
       <h6 class="text-muted text-uppercase">Price Range</h6>
       <div>
         <div class="d-flex align-items-baseline">
@@ -62,22 +65,23 @@
       <h6 class="text-muted text-uppercase mt-4">Brands</h6>
       <form (change)="brandChangeHandler($event)">
         <div class="form-check" *ngFor="let brand of allBrands">
-          <input class="form-check-input" type="checkbox" name="{{brand}}" value="{{brand}}" [checked]="filters.brands.includes(brand)">
+          <input class="form-check-input" type="checkbox" name="{{brand}}" value="{{brand}}"
+            [checked]="filters.brands.includes(brand)">
           <label class="form-check-label" for="apple">
             {{brand}}
           </label>
         </div>
       </form>
     </div>
-    <div class="col-12 col-sm-10">
-      <div class="d-flex justify-content-between filters">
-        <button class="btn btn-light shadow-sm d-flex" (click)="open(content)"><span class="material-symbols-outlined">
+    <div class="col-12 col-md-10">
+      <div class="d-flex justify-content-between justify-content-md-end filters">
+        <button class="btn btn-light shadow-sm d-flex d-md-none" (click)="open(content)"><span class="material-symbols-outlined">
             filter_alt
           </span> Filters</button>
         <div class="dropdown">
           <button class="btn btn-light shadow-sm dropdown-toggle" type="button" data-bs-toggle="dropdown"
             aria-expanded="false">Sort by: <strong class="text-muted">{{filters.sortBy}}</strong></button>
-          <ul class="dropdown-menu">
+          <ul class="dropdown-menu c-pointer">
             <li class="dropdown-item" (click)="changeSorting('Relevance')"
               [ngClass]="{'active':filters.sortBy == 'Relevance'}">
               Relevance</li>
@@ -93,7 +97,7 @@
       </div>
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 mt-0">
         <div class="col" *ngFor="let product of products">
-          <div class="card border-0 shadow-sm position-relative product-card" routerLink="product/{{product.id}}">
+          <div class="card border-0 shadow-sm position-relative product-card c-pointer" routerLink="product/{{product.id}}">
             <div class="img-aspect"><img class="img-fluid img-aspect rounded p-1 border-0" src="{{product.thumbnail}}"
                 alt="Image not Available"></div>
             <div class="rating position-absolute bg-light top-0 end-0 shadow-sm rounded-2 px-2 py-1 m-2">
