added modal handler and fixed quantity input bugs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
     <router-outlet></router-outlet>
 </div>
 <app-toast></app-toast>
+<app-confirmation-modal></app-confirmation-modal>
 <app-footer></app-footer>
